Added README file about the project

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 			</div>
 		</div>
 	</footer>
-	<button onclick="topFunction()" id="myBtn" class="myBtn" title="Go to top">Top</button>
+	<button class="myBtn" title="Go to top">Top</button>
 	<script src="js/script.js"></script>
 </body>
 </html>
