made changes to the background image and color

--- a/about.html
+++ b/about.html
@@ -47,8 +47,7 @@
 		</div>
 		<div class="about-headline">
 			<h1>
-				Global Web Development Summit on UI/UX Design, Front-end and
-				Back-end
+				GBLOBAL WEB DEVELOPMENT <br> SUMMIT 2023
 			</h1>
 			<div class="about-details">
 				<p class="about-lead">
@@ -90,8 +89,8 @@
 			<h2>See the past BHITECH summits</h2>
 			<p>Take a look at the past two summits</p>
 			<div class="summits-image">
-				<div class="summit-1"> <p> BHITECH summit<br>2021 </p> </div>
-				<div class="summit-2"><p> BHITECH summit<br>2022 </p> </div>
+				<div class="summit-1"> <p> BHITECH SUMMIT<br>2021 </p> </div>
+				<div class="summit-2"><p> BHITECH SUMMIT<br>2022 </p> </div>
 			</div>
 		</div>
 	</section>
