--- a/index.html
+++ b/index.html
@@ -47,25 +47,24 @@
 		</div>
 		<div class="headline-details">
 			<h1>
-				Global Web Development Summit on UI/UX Design, Front-end and
-				Back-end (BHITECH)2023
+				GBLOBAL WEB DEVELOPMENT SUMMIT (BHITECH) <br> 2023
 			</h1>
 			<div class="headline-description">
 				<p class="headline-lead">
 					The three days of the conference will contribute to build long-term
 					profitable and sustainable communication among the participants in a
-					wide variety of Informationa Technology areas with the common interest in Applied
-					Science, Engineering and Technology.
+					wide variety of Informationa Technology.
 				</p>
 			</div>
 			<h2 class="date">2023.03.23(TUE) ~ 25(WED)</h2>
-			<p class="venue">@ECO-HOTEL & SUIT, LAGOS, NIGERIA</p>
+			<p class="venue">@ ECO-HOTEL & SUIT, LAGOS, NIGERIA</p>
 		</div>
 	</section>
 
 	<section class="main-program">
 		<div class="main-event-details">
 			<h2>Main Program</h2>
+			<hr>
 			<ul class="program">
 				<li>
 					<img
@@ -121,80 +120,13 @@
 				</li>
 			</ul>
 			<a class="ds-program" href="#">SEE THE WHOLE PROGRAM</a>
-			<a class="mb-program" href="#">Join GSASET2023 Submit</a>
+			<a class="mb-program" href="#">Join BHITECH2023 Submit</a>
 		</div>
 	</section>
 
 	<section class="speakers">
 		<h2 class="member">Team Members</h2>
-		<div class="grid flex">
-			<!-- <div class="speakers-container">
-				<div class="speaker-image">
-					<img src="./img/hamgurger.png" width="150px" alt="Speaker image">
-				</div>
-				<div class="details">
-					<h2>Keynote Speakers</h2>
-					<p class="speaker-position">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, quo.</p>
-					<hr>
-					<p class="about-speaker">Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores repellat fuga ex vitae consequuntur!</p>
-				</div>
-			</div>
-			<div class="speakers-container">
-				<div class="speaker-image">
-					<img src="./img/hamgurger.png" width="150px" alt="Speaker image">
-				</div>
-				<div class="details">
-					<h2>Keynote Speakers</h2>
-					<p class="speaker-position">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, quo.</p>
-					<hr>
-					<p class="about-speaker">Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores repellat fuga ex vitae consequuntur!</p>
-				</div>
-			</div>
-			<div class="speakers-container">
-				<div class="speaker-image">
-					<img src="./img/hamgurger.png" width="150px" alt="Speaker image">
-				</div>
-				<div class="details">
-					<h2>Keynote Speakers</h2>
-					<p class="speaker-position">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, quo.</p>
-					<hr>
-					<p class="about-speaker">Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores repellat fuga ex vitae consequuntur!</p>
-				</div>
-			</div>
-			<div class="speakers-container">
-				<div class="speaker-image">
-					<img src="./img/hamgurger.png" width="150px" alt="Speaker image">
-				</div>
-				<div class="details">
-					<h2>Keynote Speakers</h2>
-					<p class="speaker-position">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, quo.</p>
-					<hr>
-					<p class="about-speaker">Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores repellat fuga ex vitae consequuntur!</p>
-				</div>
-			</div>
-			<div class="speakers-container">
-				<div class="speaker-image">
-					<img src="./img/hamgurger.png" width="150px" alt="Speaker image">
-				</div>
-				<div class="details">
-					<h2>Keynote Speakers</h2>
-					<p class="speaker-position">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, quo.</p>
-					<hr>
-					<p class="about-speaker">Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores repellat fuga ex vitae consequuntur!</p>
-				</div>
-			</div>
-			<div class="speakers-container">
-				<div class="speaker-image">
-					<img src="./img/hamgurger.png" width="150px" alt="Speaker image">
-				</div>
-				<div class="details">
-					<h2>Keynote Speakers</h2>
-					<p class="speaker-position">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, quo.</p>
-					<hr>
-					<p class="about-speaker">Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores repellat fuga ex vitae consequuntur!</p>
-				</div>
-			</div> -->
-			
+		<div class="grid flex">			
 		</div>
 		<div class="more">
 			<button>MORE</button>
